# ImageCoder

./: CMakeLists.txt  main.cpp
CImg-3.3.5/: README.txt
lab1/: Codings.h
lab2/: Cyphers.h  values 2.txt  values.txt
lab3/: Coder.h
lab4/: Steganography.h
src/: BST.h  Nodes.h  labFuncs.h  suppClasses.h  suppFuncs.h
